@@ -1,2 +1,4 @@
 [B]Version 1.1.91[/B]
 Fuxmovies - Fix video listing
+MissAV - Fix video listing
+JAV789 - Fix Video playback
